--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,7 @@
       </form>
       <section id="cards" class="cards">
         <article class="card-item">
+          <% if (locals.data) {%>
           <h2 class="card-activity">
             <!-- Show Activity -->
             <%= data.activity%>
@@ -52,11 +53,16 @@
               <span class="card-number"></span>
             </span>
           </div>
+          <% } %>
         </article>
 
+        <% if (locals.error) {%>
         <div id="tag-error" class="tag-error">
           <!-- Show any errors that were sent from the backend -->
+          <%= error %>
+          <!--  -->
         </div>
+        <% } %>
       </section>
     </div>
   </body>
